version/0.17/_sources/api/solver/_autosummary/settings/phase_2.rst.txt
:orphan:

.. _phase_2:

phase
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.phase_2.phase
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`phase_child <phase_child_2>`


.. rubric:: Included in:

==============================   ================================

Parent                                                    Summary

==============================   ================================
:ref:`axis_child <axis_child>`       'child_object_type' of axis.

==============================   ================================

